--- a/frames/animes.html
+++ b/frames/animes.html
@@ -109,9 +109,22 @@
     <body>
     <div id="wrapper">
             <div id="top-bar">
-                <div type="button" class="top-titlebar-back-button" title="" onclick="closeSerieDetail();">
-                    <span class="glyphicon glyphicon-share-alt"></span>
-                </div>
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element">
+                    Flixtor
+                </a>
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuMovies" onclick="main.changeFrame('movies')">
+
+                </a>
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSeries" onclick="main.changeFrame('series')">
+
+                </a>
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes on" onclick="main.changeFrame('animes')">
+
+                </a>
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('torrents')">
+
+                </a>
+
                 <div type="button" class="top-titlebar-minimize-button" title="" onclick="main.minimize();">
                     <span class="glyphicon glyphicon-minus"></span>
                 </div>
@@ -121,72 +134,8 @@
                 <div class="top-titlebar-close-button" onclick="main.closeApp();" title="">
                     <span class="glyphicon glyphicon-remove"></span>
                 </div>
-                <div class="top-titlebar-text">Flixtor</div>
             </div>
             <div id="content-wrapper">
-                <div id="side-bar-full" class="hidden-xs side-bar">
-                    <ul>
-                        <li id="side-bar-li-movies" onclick="main.changeFrame('movies')">
-                            <a class="menuMovies" href="#">
-                                <span class="glyphicon glyphicon-film"></span></a>
-                        </li>
-                        <li id="side-bar-li-series" onclick="main.changeFrame('series')">
-                            <a class="menuSeries" href="#">
-                                <span class="glyphicon glyphicon-expand"></span></a>
-                        </li>
-                        <li id="side-bar-li-animes" class="on" onclick="main.changeFrame('animes')">
-                            <a class="menuAnimes" href="#">
-                                <span class="glyphicon glyphicon-globe"></span></a>
-                        </li>
-                        <li id="side-bar-li-torrents" onclick="main.changeFrame('torrents')">
-                            <a class="menuTorrents" href="#">
-                                <span class="glyphicon glyphicon-th-list"></span></a>
-                        </li>
-                        <br><br>
-                        <li id="side-bar-li-favorites" onclick="main.changeFrame('favorites')">
-                            <a class="menuFavorites" href="#">
-                                <span class="glyphicon glyphicon-heart"></span></a>
-                        </li>
-                        <li id="side-bar-li-settings" onclick="main.changeFrame('settings')">
-                            <a class="menuSettings" href="#">
-                                <span class="glyphicon glyphicon-cog"></span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div id="side-bar-small" class="visible-xs side-bar">
-                    <ul>
-                        <li id="side-bar-li-movies-sm" onclick="main.changeFrame('movies')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-film"></span>
-                            </a>
-                        </li>
-                        <li id="side-bar-li-series-sm" onclick="main.changeFrame('series')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-expand"></span>
-                            </a>
-                        </li>
-                        <li id="side-bar-li-animes-sm" class="on" onclick="main.changeFrame('animes')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-globe"></span></a>
-                            </a>
-                        </li>
-                        <li id="side-bar-li-torrents-sm" onclick="main.changeFrame('torrents')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-th-list"></span>
-                            </a>
-                        </li>
-                        <br><br>
-                        <li id="side-bar-li-favorites-sm" onclick="main.changeFrame('favorites')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-heart"></span></a>
-                        </li>
-                        <li id="side-bar-li-settings-sm" onclick="main.changeFrame('settings')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog"></span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
                 <div id="content">
                     <script>
                         var animeFilter = {};
@@ -1022,7 +971,7 @@
                         </div>
                     </div>
 
-                    <div id="serieContainer" class="isotope" style="overflow-y:auto !important;  margin-right:10px;">
+                    <div id="serieContainer" class="isotope" style="overflow-y:auto !important;  margin-top: 10px; margin-right:10px;">
                         <!-- Dynamic content here -->
                     </div>
                     <div id="popup"></div>
