--- a/frames/torrents.html
+++ b/frames/torrents.html
@@ -113,85 +113,34 @@
             }
         </style>
         <div id="wrapper">
-            <div id="top-bar">
-                <div type="button" class="top-titlebar-back-button" title="" onclick="main.goBack();">
-                    <span class="glyphicon glyphicon-share-alt"></span>
-                </div>
-                <div type="button" class="top-titlebar-minimize-button" title="" onclick="main.minimize();">
-                    <span class="glyphicon glyphicon-minus"></span>
-                </div>
-                <div type="button" class="top-titlebar-fullscreen-button" title="" onclick="main.toggleFullScreen();">
-                    <span class="glyphicon glyphicon-fullscreen"></span>
-                </div>
-                <div class="top-titlebar-close-button" onclick="main.closeApp();" title="">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </div>
-                <div class="top-titlebar-text">Flixtor</div>
+        <div id="top-bar">
+            <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element">
+                Flixtor
+            </a>
+            <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuMovies" onclick="main.changeFrame('movies')">
+
+            </a>
+            <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSeries" onclick="main.changeFrame('series')">
+
+            </a>
+            <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes" onclick="main.changeFrame('animes')">
+
+            </a>
+            <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents on" onclick="main.changeFrame('torrents')">
+
+            </a>
+
+            <div type="button" class="top-titlebar-minimize-button" title="" onclick="main.minimize();">
+                <span class="glyphicon glyphicon-minus"></span>
             </div>
+            <div type="button" class="top-titlebar-fullscreen-button" title="" onclick="main.toggleFullScreen();">
+                <span class="glyphicon glyphicon-fullscreen"></span>
+            </div>
+            <div class="top-titlebar-close-button" onclick="main.closeApp();" title="">
+                <span class="glyphicon glyphicon-remove"></span>
+            </div>
+        </div>
             <div id="content-wrapper">
-                <div id="side-bar-full" class="hidden-xs side-bar">
-                    <ul>
-                        <li id="side-bar-li-movies" onclick="main.changeFrame('movies')">
-                            <a class="menuMovies" href="#">
-                                <span class="glyphicon glyphicon-film"></span></a>
-                        </li>
-                        <li id="side-bar-li-series" onclick="main.changeFrame('series')">
-                            <a class="menuSeries" href="#">
-                                <span class="glyphicon glyphicon-expand"></span></a>
-                        </li>
-                        <li id="side-bar-li-animes" onclick="main.changeFrame('animes')">
-                            <a class="menuAnimes" href="#">
-                                <span class="glyphicon glyphicon-globe"></span></a>
-                        </li>
-                        <li id="side-bar-li-torrents" class="on" onclick="main.changeFrame('torrents')">
-                            <a class="menuTorrents" href="#">
-                                <span class="glyphicon glyphicon-th-list"></span></a>
-                        </li>
-                        <br><br>
-                        <li id="side-bar-li-favorites" onclick="main.changeFrame('favorites')">
-                            <a class="menuFavorites" href="#">
-                                <span class="glyphicon glyphicon-heart"></span></a>
-                        </li>
-                        <li id="side-bar-li-settings" onclick="main.changeFrame('settings')">
-                            <a class="menuSettings" href="#">
-                                <span class="glyphicon glyphicon-cog"></span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div id="side-bar-small" class="visible-xs side-bar">
-                    <ul>
-                        <li id="side-bar-li-movies-sm" onclick="main.changeFrame('movies')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-film"></span>
-                            </a>
-                        </li>
-                        <li id="side-bar-li-series-sm" onclick="main.changeFrame('series')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-expand"></span>
-                            </a>
-                        </li>
-                        <li id="side-bar-li-animes-sm" onclick="main.changeFrame('animes')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-globe"></span></a>
-                            </a>
-                        </li>
-                        <li id="side-bar-li-torrents-sm" class="on" onclick="main.changeFrame('torrents')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-th-list"></span>
-                            </a>
-                        </li>
-                        <br><br>
-                        <li id="side-bar-li-favorites-sm" onclick="main.changeFrame('favorites')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-heart"></span></a>
-                        </li>
-                        <li id="side-bar-li-settings-sm" onclick="main.changeFrame('settings')">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog"></span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
                 <div id="popup"></div>
                 <div id="content">
                     <script type="text/javascript">
@@ -371,7 +320,7 @@
                     </script>
 
 
-                    <div class="p-10">
+                    <div id="head-bar" class="p-10">
                         <div class="row" style="margin-right:0;">
                             <div class="col-lg-9">
                                 <div class="input-group">
@@ -409,6 +358,8 @@
                             <!-- /.col-lg-6 -->
                             <div class="clearfix"></div>
                         </div>
+                    </div>
+                    <div class="p-10">
                         <div id="torrents" style="overflow-y:auto !important;">
                             <div class="mr-10">
                                 <ul id="categoryMenu" class="nav nav-tabs mt-20">
