--- a/frames/torrents.html
+++ b/frames/torrents.html
@@ -112,7 +112,7 @@
                 color: #D6D6D6;
             }
         </style>
-        <div id="wrapper">
+        <div id="wrapper" style="background: rgba(0,0,0, 0.2); height: 100%;">
         <div id="top-bar">
             <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element">
                 Flixtor
