--- a/frames/movies.html
+++ b/frames/movies.html
@@ -12,6 +12,9 @@
         <!-- Scripts -->
         <script type='text/javascript' src="../js/extensions/jquery.min.js"></script>
         <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
+        <script type='text/javascript' src="../js/extensions/jquery-ui.js"></script>
+        <script type='text/javascript' src="../js/extensions/circle-progress.js"></script>
+
         <script src="../js/extensions/jquery.isotope.min.js"></script>
         <script src="../js/extensions/nwcontextmenu.js"></script>
         <script src="../js/extensions/mousetrap.min.js"></script>
@@ -27,6 +30,8 @@
             var yifysubtitle = require('../js/yifysubtitle.js');
             var favorites = require('../js/favorites.js');
             var translations = require('../js/translations.js');
+            var readTorrent = require('read-torrent');
+            var health = require('torrent-health');
             var xbmc = require('nodebmc');
             var devices = [];
 
@@ -99,7 +104,6 @@
     </head>
 
     <body>
-        <div id="customCSS"></div>
         <div id="wrapper">
             <div id="top-bar">
                 <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element">
@@ -219,6 +223,9 @@
                         }
 
                         function showDetails(movieJson) {
+                            var torrents;
+                            var currentTorrent;
+                            var currentSubtitle;
                             var movie = $.parseJSON(movieJson.firstChild.innerHTML);
 
                             $('#title' ).empty();
@@ -239,7 +246,7 @@
                             });
 
                             //Insert backdrop path
-                            $( "<style> #customCSS {position: absolute; top: 0; bottom: 0;left: 0; right: 0; z-index: -100; background: url("+movie.fanart+") no-repeat center center fixed; -webkit-background-size: cover; background-size: cover; color: #e9e9e9;}</style>" ).appendTo("#customCSS");
+                            $( "<style> #customCSS {position: absolute; top: 0; bottom: 0;left: 0; right: 0; z-index: -100; background: url("+movie.fanart+") no-repeat center 90px fixed; -webkit-background-size: cover; background-size: cover; color: #e9e9e9;}</style>" ).appendTo("#customCSS");
 
                             favorites.checkIfFavorite( movie.imdbCode, function(result) {
                                 if( result == true ) {
@@ -302,6 +309,93 @@
                             }else {
                                 $("#btnTrailer").addClass("hide");
                             }
+
+                            console.log(movie);
+
+                            torrents = movie.torrents[0];
+
+                            for (var key in torrents) {
+                                var torrent = torrents[key];
+                                if( key !== '0' ) {
+                                    $("#quality").append('<button data-torrent="'+torrent+'" class="btn btn-quality" style="width: 100%;"><label title=""><div style="float: left;">'+key+'</div><div style="float: right;"><div style="width: 14px;" class="circle"></div></div><div style="clear: both;"></div></label></button>');
+                                }
+                            }
+
+                            $('.circle').circleProgress({
+                                value: 0,
+                                thickness: 2,
+                                size: 14,
+                                emptyFill: "#272f3a"
+                            });
+
+                            // Select first quality
+                            $("#quality").find(".btn-quality:first").trigger("click");
+
+                            $("body").on("click", ".btn-quality", function () {
+                                $(".btn-quality").removeClass("current");
+                                $(this).addClass('current');
+                                var current = $(this);
+                                var torrent = $(this).data("torrent");
+
+                                $(current).find('.circle').append('<img style="width: 14px; height: 14px; position: absolute; right: 5px; top: 3px;" id="img-spinner" src="../images/ajax-loader.gif" alt="Loading"/>');
+                                //$(current).find('label').append('<img style="width: 14px; height: 14px; position: absolute; right: 8px; top: 3px;" id="img-spinner" src="../images/ajax-loader.gif" alt="Loading"/>');
+
+                                health(torrent).then(function(health) {
+                                    var ratio = health.peers > 0 ? (health.seeds / health.peers) : health.seeds;
+
+                                    // Normalize the data. Convert each to a percentage
+                                    var normalizedRatio = Math.min(ratio / 5 * 100, 100);
+                                    // Seeds: Anything above 30 seeds is good
+                                    var normalizedSeeds = Math.min(health.seeds / 30 * 100, 100);
+
+                                    // Weight the above metrics differently
+                                    // Ratio is weighted 60% whilst seeders is 40%
+                                    var ratioWeight = normalizedRatio * 0.6;
+                                    var seedsWeight = normalizedSeeds * 0.4;
+                                    var totalWeight = (ratioWeight + seedsWeight) / 100;
+
+                                    $(current).find('.circle').show();
+
+                                    $(current).find('label').attr('title', 'Seeds '+health.seeds+' / Peers '+health.peers);
+                                    $(current).find('.circle').circleProgress({
+                                        value: totalWeight,
+                                        animation: false,
+                                        fill: {
+                                            color: "#66afe9"
+                                        }
+                                    });
+
+                                    $(current).find('#img-spinner').remove();
+
+                                })
+                                .catch(function (err) {
+                                    console.error(err);
+                                    $(current.find('label').attr('title', 'Seeds unknown / Peers unknown'));
+                                });
+
+                                yifysubtitle.search(movie.imdbCode, function (subs) {
+                                    $('.subtitles').empty();
+                                    $('.subtitles').append('<li><a class="subtitle" data-subname="No subtitle" data-subiso="" >No subtitle</a></li>');
+                                    if( subs !== false ) {
+                                        console.log(subs);
+                                        for (var key in subs) {
+                                            var sub = subs[key];
+                                            $(".subtitles").append('<li><a class="subtitle" data-subname="'+sub.languageName+'" data-subiso="'+sub.languageName+'" >'+sub.languageName+'</a></li>');
+                                        }
+                                    }
+                                });
+                                currentTorrent = torrent;
+                            });
+
+                            $("body").on("click", ".subtitle", function () {
+                                var subIso = $(this).data("subiso");
+                                var subName = $(this).data("subname");
+                                $('#btnSubtitle').empty();
+                                $('#btnSubtitle').append('<i class="glyphicon glyphicon-play"></i>&nbsp;&nbsp;'+subName+'');
+
+                                currentSubtitle = subIso;
+                                console.log(currentSubtitle);
+                            });
 
                             $("#btnBuy").click(function () {
                                 var shoppingUrl = 'https://www.google.com/search?q='+movie.title+' movie&tbm=shop';
@@ -607,7 +701,37 @@
                 </div>
 
                 <div id="content-overlay" style="display: none;">
+                    <div id="customCSS"></div>
+                    <div id="head-bar-detail" class="p-10" style="position: fixed; top: 40px;">
+                        <div class="row" style="margin-right:0;">
+                            <div class="input-group">
+                                <span class="input-group-btn">
+                                    <span class="col-md-1 col-sm-1 col-xs-1">
+
+                                    </span>
+                                    <span style="float: right;">
+                                        <div id="quality" class="btn-group"></div>
+                                    </span>
+                                    <span class="mr-10" style="float: right;">
+                                        <div class="btn-group" style="width: 100%;">
+                                            <button type="button" id="btnSubtitle" class="btn btn-flixtor btn-sm" style="width: 80%;"><i class='glyphicon glyphicon-play'></i>&nbsp;&nbsp;No subtitle</button>
+                                            <button type="button" class="btn btn-flixtor dropdown-toggle btn-sm" data-toggle="dropdown" style="width: 20%;">
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu dropdown-menu-flixtor subtitles" role="menu" style="width: 100%;">
+                                            </ul>
+                                        </div>
+                                    </span>
+                                </span>
+                            </div>
+                            <!-- /input-group -->
+                        </div>
+                        <!-- /.col-lg-6 -->
+                        <div class="clearfix"></div>
+                    </div>
+
                     <div id="movie" class="modal fade in p-30">
+                        <div id="gradient" style="position: absolute; top: 0; bottom: 0;left: 0; right: 0; z-index: -100; background: url(../images/gradient.png) no-repeat center center fixed; -webkit-background-size: cover; background-size: cover;"></div>
                         <div class="container center-block">
                             <div class="row">
                                 <div class="col-sm-3 hidden-sm hidden-xs">
@@ -637,12 +761,10 @@
                                     </div>
                                     <div id="runtime" class="pt-5"><span class="glyphicon glyphicon-time"></span>&nbsp;&nbsp;</div>
                                     <div id="date" class="pt-5"><span class="glyphicon glyphicon-calendar"></span>&nbsp;&nbsp;</div>
-                                    <div id="quality" class="pt-5"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="modal-backdrop fade in" style="opacity:0.85;"></div>
                 </div>
                 <div id="video-container-trailer">
                 </div>
